--- a/BSiNS/Src/Components/com_ScreenHeader.fx.yaml
+++ b/BSiNS/Src/Components/com_ScreenHeader.fx.yaml
@@ -1,6 +1,7 @@
 com_ScreenHeader As CanvasComponent:
     Fill: =RGBA(0, 0, 0, 0)
-    Height: =75
+    Height: =If(Self.IsEntryScreen, 75, 125)
+    IsEntryScreen: =true
     OnLogoClickScreen: =App.ActiveScreen
     Title: ="Text"
     Width: =App.Width
@@ -8,17 +9,117 @@ com_ScreenHeader As CanvasComponent:
     Y: =0
     ZIndex: =1
 
-    hdr_ScreenHeader As Header:
-        DisplayMode: =DisplayMode.Edit
-        Height: =75
-        Logo: =FFLogo
-        OnSelectLogo: =If(!IsBlank(com_ScreenHeader.OnLogoClickScreen), Navigate(com_ScreenHeader.OnLogoClickScreen))
-        Title: =Parent.Title
-        UserEmail: =User().Email
-        UserImage: =User().Image
-        UserName: =User().FullName
+    vrt_ScreenHeader As groupContainer.verticalAutoLayoutContainer:
+        Height: =Parent.Height
+        LayoutAlignItems: =LayoutAlignItems.Stretch
+        LayoutDirection: =LayoutDirection.Vertical
+        LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+        LayoutMode: =LayoutMode.Auto
+        RadiusBottomLeft: =4
+        RadiusBottomRight: =4
+        RadiusTopLeft: =4
+        RadiusTopRight: =4
         Width: =Parent.Width
-        X: =0
-        Y: =0
-        ZIndex: =1
+        ZIndex: =3
+
+        hdr_ScreenHeader As Header:
+            DisplayMode: =DisplayMode.Edit
+            Height: =75
+            LayoutMinHeight: =75
+            LayoutMinWidth: =200
+            Logo: =FFLogo
+            OnSelectLogo: =If(!IsBlank(com_ScreenHeader.OnLogoClickScreen), Navigate(com_ScreenHeader.OnLogoClickScreen))
+            Title: =com_ScreenHeader.Title
+            UserEmail: =User().Email
+            UserImage: =User().Image
+            UserName: =User().FullName
+            Width: =Parent.Width
+            X: =0
+            Y: =0
+            ZIndex: =1
+
+        hrz_Title As groupContainer.horizontalAutoLayoutContainer:
+            AlignInContainer: =AlignInContainer.SetByContainer
+            DropShadow: =DropShadow.Light
+            Height: =40
+            LayoutAlignItems: =LayoutAlignItems.Stretch
+            LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+            LayoutMinHeight: =50
+            LayoutMinWidth: =200
+            LayoutMode: =LayoutMode.Auto
+            PaddingBottom: =5
+            PaddingLeft: =5
+            PaddingRight: =5
+            PaddingTop: =5
+            RadiusBottomLeft: =4
+            RadiusBottomRight: =4
+            RadiusTopLeft: =4
+            RadiusTopRight: =4
+            Visible: =!com_ScreenHeader.IsEntryScreen
+            Width: =Parent.Width
+            Y: =20
+            ZIndex: =2
+
+            btn_Back As Button:
+                Align: =Align.Justify
+                Appearance: ='ButtonCanvas.Appearance'.Transparent
+                DisplayMode: =DisplayMode.Edit
+                Height: =32
+                Icon: ="ArrowLeft"
+                IconStyle: ='ButtonCanvas.IconStyle'.Filled
+                Layout: ='ButtonCanvas.Layout'.IconBefore
+                LayoutMinHeight: =32
+                LayoutMinWidth: =96
+                OnSelect: =Navigate(scr_Entry,ScreenTransition.Fade);
+                Text: ="Nazad na početnu"
+                VerticalAlign: =VerticalAlign.Middle
+                Width: =170
+                X: =0
+                Y: =0
+                ZIndex: =1
+
+            "bcr_Reader As 'Barcode Reader'":
+                BarcodeType: ='BarcodeReader.BarcodeType'.Code128
+                BorderFillColor: =RGBA(0, 0, 0, 1)
+                BorderRadius: =10
+                BorderThickness: =1
+                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                DisabledContentColor: =RGBA(166, 166, 166, 1)
+                DisabledFillColor: =RGBA(244, 244, 244, 1)
+                DisplayMode: =DisplayMode.Edit
+                FillColor: =RGBA(255, 255, 255, 1)
+                FontSize: =12
+                Height: =35
+                HoverBorderColor: =RGBA(189, 49, 51, 1)
+                HoverContentColor: =RGBA(255, 255, 255, 1)
+                HoverFillColor: =RGBA(189, 49, 51, 1)
+                LayoutMinHeight: =30
+                LayoutMinWidth: =280
+                OnCancel: =false
+                OnScan: |
+                    =Set(
+                        scannedItem,
+                        First(bcr_Reader.Barcodes).Value
+                    );
+                    Set(
+                        isModalOpen,
+                        true
+                    );
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                PressedBorderColor: =RGBA(189, 49, 51, 1)
+                PressedContentColor: =RGBA(189, 49, 51, 1)
+                PressedFillColor: =RGBA(255, 255, 255, 1)
+                ScanningMode: ='BarcodeReader.ScanningMode'.SelectToScan
+                Text: ="Skener"
+                TextAlignment: =Align.Center
+                TextColor: =RGBA(0, 0, 0, 1)
+                VerticalAlign: =VerticalAlign.Middle
+                Visible: =isMobile
+                Width: =80
+                X: =164
+                Y: =9
+                ZIndex: =2
 
