--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -402,9 +402,8 @@
         ZIndex: =2
 
         com_InvHeader As com_ScreenHeader:
-            IsEntryScreen: =false
             LayoutMinHeight: =640
-            LayoutMinWidth: =200
+            LayoutMinWidth: =640
             OnLogoClickScreen: =scr_Entry
             Title: ="TEMELJNICE INVENTURE"
 
@@ -423,6 +422,87 @@
             RadiusTopLeft: =4
             RadiusTopRight: =4
             ZIndex: =3
+
+            hrz_InvTitle As groupContainer.horizontalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                DropShadow: =DropShadow.Light
+                FillPortions: =0
+                Height: =40
+                LayoutAlignItems: =LayoutAlignItems.Stretch
+                LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                PaddingBottom: =5
+                PaddingLeft: =5
+                PaddingRight: =5
+                PaddingTop: =5
+                RadiusBottomLeft: =4
+                RadiusBottomRight: =4
+                RadiusTopLeft: =4
+                RadiusTopRight: =4
+                Width: =Parent.Width
+                ZIndex: =1
+
+                btn_InvBack As Button:
+                    Align: =Align.Justify
+                    Appearance: ='ButtonCanvas.Appearance'.Transparent
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    Icon: ="ArrowLeft"
+                    IconStyle: ='ButtonCanvas.IconStyle'.Filled
+                    Layout: ='ButtonCanvas.Layout'.IconBefore
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =96
+                    OnSelect: =Navigate(scr_Entry,ScreenTransition.Fade);
+                    Text: ="Nazad na početnu"
+                    VerticalAlign: =VerticalAlign.Middle
+                    Width: =170
+                    X: =0
+                    Y: =0
+                    ZIndex: =1
+
+                "bcr_Inv As 'Barcode Reader'":
+                    BarcodeType: ='BarcodeReader.BarcodeType'.Code128
+                    BorderFillColor: =RGBA(0, 0, 0, 1)
+                    BorderRadius: =10
+                    BorderThickness: =1
+                    DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                    DisabledContentColor: =RGBA(166, 166, 166, 1)
+                    DisabledFillColor: =RGBA(244, 244, 244, 1)
+                    DisplayMode: =DisplayMode.Edit
+                    FillColor: =RGBA(255, 255, 255, 1)
+                    FontSize: =12
+                    Height: =35
+                    HoverBorderColor: =RGBA(189, 49, 51, 1)
+                    HoverContentColor: =RGBA(255, 255, 255, 1)
+                    HoverFillColor: =RGBA(189, 49, 51, 1)
+                    LayoutMinHeight: =30
+                    LayoutMinWidth: =280
+                    OnCancel: =false
+                    OnScan: |
+                        =UpdateContext({scannedItem: First(bcr_Inv.Barcodes).Value});
+                        Set(
+                            isModalOpen,
+                            true
+                        );
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    PressedBorderColor: =RGBA(189, 49, 51, 1)
+                    PressedContentColor: =RGBA(189, 49, 51, 1)
+                    PressedFillColor: =RGBA(255, 255, 255, 1)
+                    ScanningMode: ='BarcodeReader.ScanningMode'.SelectToScan
+                    Text: ="Skener"
+                    TextAlignment: =Align.Center
+                    TextColor: =RGBA(0, 0, 0, 1)
+                    VerticalAlign: =VerticalAlign.Middle
+                    Visible: =isMobile
+                    Width: =80
+                    X: =164
+                    Y: =9
+                    ZIndex: =2
 
             con_InvDocumentName As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
@@ -867,7 +947,6 @@
             RadiusBottomRight: =4
             RadiusTopLeft: =4
             RadiusTopRight: =4
-            Visible: =false
             Width: =Max(App.Width, App.MinScreenWidth)
             ZIndex: =4
 
@@ -950,11 +1029,6 @@
                 X: =0
                 Y: =0
                 ZIndex: =4
-
-        com_InvFooter As com_Footer:
-            LayoutMinHeight: =640
-            LayoutMinWidth: =200
-            ZIndex: =5
 
     com_InvModal As com_Modal:
         QuantityCompleted: =glr_Inv.Selected.Quantity
