--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -2,7 +2,7 @@ com_Modal As CanvasComponent:
     ChildTabPriority: =
     Fill: =RGBA(0, 0, 0, 0)
     Height: =App.Height
-    IsInventura: =true
+    IsModalOpen: =true
     QuantityCompleted: =0
     QuantityNewLOT: =0
     Width: =App.Width
@@ -13,6 +13,7 @@ com_Modal As CanvasComponent:
     con_ModalFade As groupContainer.manualLayoutContainer:
         Fill: =RGBA(0, 0, 0, 0.5)
         Height: =Parent.Height
+        Visible: =IsModalOpen
         Width: =Parent.Width
         ZIndex: =1
 
@@ -24,7 +25,7 @@ com_Modal As CanvasComponent:
             RadiusBottomRight: =4
             RadiusTopLeft: =4
             RadiusTopRight: =4
-            Width: =Parent.Width * 80%
+            Width: =Parent.Width * 75%
             X: =(Parent.Width - Self.Width) / 2
             Y: =(Parent.Height - Self.Height) / 2
             ZIndex: =1
@@ -90,7 +91,7 @@ com_Modal As CanvasComponent:
                             =Reset(inp_rezQty_2);
                             Reset(inp_potrebnoQty_2);
                             Set(
-                                isModalOpen,
+                                IsModalOpen,
                                 false
                             );
                         Text: ="Zatvori"
@@ -115,7 +116,7 @@ com_Modal As CanvasComponent:
                     PaddingTop: =15
                     ZIndex: =2
 
-                    hrz_ModalQuantity As groupContainer.verticalAutoLayoutContainer:
+                    Container13_10 As groupContainer.verticalAutoLayoutContainer:
                         LayoutAlignItems: =LayoutAlignItems.Center
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                         LayoutMinHeight: =30
@@ -127,74 +128,62 @@ com_Modal As CanvasComponent:
                         RadiusTopRight: =4
                         ZIndex: =2
 
-                        Container1 As groupContainer.verticalAutoLayoutContainer:
-                            AlignInContainer: =AlignInContainer.SetByContainer
-                            LayoutDirection: =LayoutDirection.Vertical
-                            LayoutJustifyContent: =LayoutJustifyContent.Center
-                            LayoutMinHeight: =100
-                            LayoutMinWidth: =120
-                            LayoutMode: =LayoutMode.Auto
-                            RadiusBottomLeft: =4
-                            RadiusBottomRight: =4
-                            RadiusTopLeft: =4
-                            RadiusTopRight: =4
+                        TextCanvas3_11 As Text:
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =80
+                            Size: =20
+                            Text: ="Rezervisano"
+                            Width: =110
+                            X: =40
+                            Y: =40
                             ZIndex: =1
 
-                            txt_ModalQuantity As Text:
-                                AutoHeight: =true
-                                DisplayMode: =DisplayMode.Edit
-                                Height: =32
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =80
-                                Size: =20
-                                Text: =If(com_Modal.IsInventura, "Količina", "Rezervisano")
-                                Width: =110
-                                X: =40
-                                Y: =40
-                                ZIndex: =1
-
-                            "inp_rezQty_2 As 'Text input'":
-                                Align: ='TextInputCanvas.Align'.Center
-                                Appearance: ='TextInputCanvas.Appearance'.Outline
-                                BasePaletteColor: =
-                                DisplayMode: =DisplayMode.Edit
-                                FontSize: =26
-                                Height: =40
-                                LayoutMinHeight: =32
-                                LayoutMinWidth: =320
-                                OnChange: |
-                                    =If(
-                                        (!IsNumeric(inp_rezQty_2.Value) && !IsBlank(inp_rezQty_2.Value)) || Value(inp_rezQty_2.Value) < 0,
-                                        Notify(
-                                            "Unesite pozitivan broj.",
-                                            NotificationType.Error,
-                                            2000
-                                        );
-                                        Reset(inp_rezQty_2);
-                                        UpdateContext({potrebnaKolicina: 0}),
-                                        If(
-                                            Value(inp_rezQty_2.Value) > Abs(glr_ProResEntries.Selected.Quantity_Completed),
-                                            Reset(inp_rezQty_2);
-                                            UpdateContext({potrebnaKolicina: 0});
-                                            Notify(
-                                                "Maksimalna količina za isporuku je " & Abs(glr_ProResEntries.Selected.Quantity_Completed),
-                                                NotificationType.Information,
-                                                2000
-                                            ),
-                                            UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
-                                        )
+                        "inp_rezQty_2 As 'Text input'":
+                            Align: ='TextInputCanvas.Align'.Center
+                            Appearance: ='TextInputCanvas.Appearance'.Outline
+                            BasePaletteColor: =
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =0
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =320
+                            OnChange: |
+                                =If(
+                                    (!IsNumeric(inp_rezQty_2.Value) && !IsBlank(inp_rezQty_2.Value)) || Value(inp_rezQty_2.Value) < 0,
+                                    Notify(
+                                        "Unesite pozitivan broj.",
+                                        NotificationType.Error,
+                                        2000
                                     );
-                                Placeholder: =
-                                Required: =true
-                                Type: ="Text"
-                                Value: =Abs(QuantityCompleted)
-                                Visible: =true
-                                Width: =110
-                                X: =40
-                                Y: =40
-                                ZIndex: =2
+                                    Reset(inp_rezQty_2);
+                                    UpdateContext({potrebnaKolicina: 0}),
+                                    
+                                    If(
+                                        Value(inp_rezQty_2.Value) > Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                        Reset(inp_rezQty_2);
+                                        UpdateContext({potrebnaKolicina: 0});
+                                        Notify(
+                                            "Maksimalna količina za isporuku je " & Abs(glr_ProResEntries.Selected.Quantity_Completed),
+                                            NotificationType.Information,
+                                            2000
+                                        ),
+                                        UpdateContext({potrebnaKolicina: Abs(glr_ProResEntries.Selected.Quantity) - inp_rezQty_2.Value})
+                                    )
+                                );
+                            Placeholder: ="Unesite rezervisano količinu"
+                            Required: =true
+                            Type: ="Text"
+                            Value: =Abs(com_Modal.QuantityCompleted)
+                            Visible: =true
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =3
 
-                        vrt_ModalQuantityChevrons As groupContainer.verticalAutoLayoutContainer:
+                        Container8_1 As groupContainer.verticalAutoLayoutContainer:
                             AlignInContainer: =AlignInContainer.SetByContainer
                             FillPortions: =0
                             LayoutAlignItems: =LayoutAlignItems.Center
@@ -211,7 +200,7 @@ com_Modal As CanvasComponent:
                             Width: =100
                             ZIndex: =4
 
-                            btn_ModalQuantityAdd As Button:
+                            ButtonCanvas9_2 As Button:
                                 DisplayMode: =DisplayMode.Edit
                                 FillPortions: =1
                                 FontSize: =60
@@ -220,13 +209,13 @@ com_Modal As CanvasComponent:
                                 Layout: ='ButtonCanvas.Layout'.IconOnly
                                 LayoutMinHeight: =32
                                 LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted + 1);
+                                OnSelect: =Set(QuantityCompleted, com_Modal.QuantityCompleted + 1);
                                 Width: =96
                                 X: =0
                                 Y: =0
                                 ZIndex: =1
 
-                            btn_ModalQuantityRemove As Button:
+                            ButtonCanvas9_3 As Button:
                                 DisplayMode: =DisplayMode.Edit
                                 FillPortions: =1
                                 FontSize: =60
@@ -235,13 +224,13 @@ com_Modal As CanvasComponent:
                                 Layout: ='ButtonCanvas.Layout'.IconOnly
                                 LayoutMinHeight: =32
                                 LayoutMinWidth: =96
-                                OnSelect: =Set(QuantityCompleted, QuantityCompleted - 1);
+                                OnSelect: =Set(QuantityCompleted, com_Modal.QuantityCompleted - 1);
                                 Width: =96
                                 X: =0
                                 Y: =0
                                 ZIndex: =2
 
-                    hrz_ModalQuantityNew As groupContainer.verticalAutoLayoutContainer:
+                    Container13_11 As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
                         LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
@@ -252,21 +241,82 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =!com_Modal.IsInventura
                         ZIndex: =3
 
-                        Container3 As groupContainer.verticalAutoLayoutContainer:
+                        TextCanvas3_13 As Text:
+                            AutoHeight: =true
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =96
+                            Size: =20
+                            Text: ="Potrebno"
+                            Width: =96
+                            X: =40
+                            Y: =40
+                            ZIndex: =1
+
+                        "inp_potrebnoQty_2 As 'Text input'":
+                            Align: ='TextInputCanvas.Align'.Center
+                            Appearance: ='TextInputCanvas.Appearance'.Outline
+                            BasePaletteColor: =
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =0
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =320
+                            Placeholder: ="Unesite potrebnu količinu"
+                            Value: =If(IsBlank(com_Modal.QuantityNewLOT),0,com_Modal.QuantityNewLOT)
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =2
+
+                        Container8_2 As groupContainer.verticalAutoLayoutContainer:
                             AlignInContainer: =AlignInContainer.SetByContainer
+                            FillPortions: =0
+                            LayoutAlignItems: =LayoutAlignItems.Center
                             LayoutDirection: =LayoutDirection.Vertical
+                            LayoutGap: =5
                             LayoutJustifyContent: =LayoutJustifyContent.Center
                             LayoutMinHeight: =100
-                            LayoutMinWidth: =120
+                            LayoutMinWidth: =250
                             LayoutMode: =LayoutMode.Auto
                             RadiusBottomLeft: =4
                             RadiusBottomRight: =4
                             RadiusTopLeft: =4
                             RadiusTopRight: =4
-                            ZIndex: =1
+                            Width: =100
+                            ZIndex: =3
+
+                            ButtonCanvas9_4 As Button:
+                                DisplayMode: =DisplayMode.Edit
+                                FillPortions: =1
+                                FontSize: =60
+                                Height: =32
+                                Icon: ="ChevronUp"
+                                Layout: ='ButtonCanvas.Layout'.IconOnly
+                                LayoutMinHeight: =32
+                                LayoutMinWidth: =96
+                                OnSelect: =
+                                Width: =96
+                                X: =0
+                                Y: =0
+                                ZIndex: =1
+
+                            ButtonCanvas9_5 As Button:
+                                DisplayMode: =DisplayMode.Edit
+                                FillPortions: =1
+                                FontSize: =60
+                                Height: =32
+                                Icon: ="ChevronDown"
+                                Layout: ='ButtonCanvas.Layout'.IconOnly
+                                LayoutMinHeight: =32
+                                LayoutMinWidth: =96
+                                Width: =96
+                                X: =0
+                                Y: =0
+                                ZIndex: =2
 
                             TextCanvas3_13 As Text:
                                 AutoHeight: =true
@@ -368,14 +418,10 @@ com_Modal As CanvasComponent:
                         Layout: ='ButtonCanvas.Layout'.IconAfter
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
-                        OnSelect: |
+                        OnSelect: |-
                             =Reset(inp_rezQty_2);
                             Reset(inp_potrebnoQty_2);
-                            Patch(colLines, LookUp(colLines, glr_Inv.Selected.'Line_No.' = 'Line_No.'), {Qty_Phys_Inventory: inp_rezQty_2.Value});
-                            Set(
-                                isModalOpen,
-                                false
-                            );
+                            Set(IsModalOpen, false);
                         Text: ="Spasi"
                         Width: =96
                         X: =0
