--- a/BSiNS/Src/scr_Entry.fx.yaml
+++ b/BSiNS/Src/scr_Entry.fx.yaml
@@ -105,7 +105,7 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        com_EntryHeader As com_ScreenHeader:
+        com_EntryHeader As com_Header:
             ChildTabPriority: =App.Width
             LayoutMinHeight: =640
             LayoutMinWidth: =200
