--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -142,7 +142,7 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        com_InvHeader As com_ScreenHeader:
+        com_InvHeader As com_Header:
             LayoutMinHeight: =640
             LayoutMinWidth: =640
             OnLogoClickScreen: =scr_Entry
