--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -1,11 +1,7 @@
 "scr_XMLTemeljniceInventure As screen.'autoLayout_HeaderFooter_ver1.0'":
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =App.Theme.Colors.Primary
-    OnHidden: |
-        =ClearCollect(
-            colLines,
-            Blank()
-        );
+    OnHidden: =
     OnVisible: |
         =Set(
             isLoading,
@@ -277,11 +273,11 @@
             "glr_Inv As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =App.Theme.Colors.Darker40
-                Default: =First(Filter(inventureCollection, ThisRecord.Barcode = scannedItem))
+                Default: =First(Filter(colLines, ThisRecord.Barcode = scannedItem))
                 DelayItemLoading: =true
                 Fill: =RGBA(237, 237, 237, 1)
                 Height: =562
-                Items: =inventureCollection
+                Items: =colLines
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
@@ -320,11 +316,11 @@
                     Icon: =Icon.AddDocument
                     OnSelect: |
                         =Collect(
-                            inventureCollection,
+                            colLines,
                             {
                                 Journal_Template_Name: ThisItem.Journal_Template_Name,
                                 Journal_Batch_Name: ThisItem.Journal_Batch_Name,
-                                'Line_No.': Text((CountRows(inventureCollection) + 1) * 10000),
+                                'Line_No.': Text((CountRows(colLines) + 1) * 10000),
                                 'Document_No.': ThisItem.'Document_No.',
                                 Description: ThisItem.Description,
                                 Source_Type: ThisItem.Source_Type,
@@ -348,15 +344,6 @@
                                 Barcode: ThisItem.Barcode
                             }
                         );
-                        ClearCollect(
-                            inventureCollectionEdited,
-                            inventureCollection
-                        );
-                        ClearCollect(
-                            inventureCollection,
-                            inventureCollectionEdited
-                        );
-                        Clear(inventureCollectionEdited);
                     Width: =25
                     X: =Parent.TemplateWidth - 50
                     Y: =lbl_InvBarcode.Y
@@ -717,7 +704,7 @@
                         ),
                         IfError(
                             UpdateXML.Run(
-                                "{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(inventureCollection) & "}" & "}",
+                                "{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(colLines) & "}" & "}",
                                 SelectedFile,
                                 SelectedFolder
                             ),
@@ -994,7 +981,7 @@
                     LayoutMinHeight: =32
                     LayoutMinWidth: =96
                     OnSelect: |
-                        =If(
+                        =/*If(
                             IsBlank(glr_Inv.Selected.Lot_No),
                             UpdateIf(
                                 inventureCollection,
@@ -1018,7 +1005,7 @@
                             inventureCollection,
                             inventureCollectionEdited
                         );
-                        Clear(inventureCollectionEdited);
+                        Clear(inventureCollectionEdited);*/
                         Reset(inp_InvQuantity);
                         UpdateIf(
                             lockedItems,
